ref: update evaluation notebook

--- a/eval.ipynb
+++ b/eval.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "id": "33e37354-2df3-47d0-ad83-49f39442f51f",
    "metadata": {},
    "outputs": [
@@ -35,9 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://github.com/ex3ndr/supervoice-vocoder/zipball/master\" to /home/steve/.cache/torch/hub/master.zip\n",
-      "Downloading: \"https://shared.korshakov.com/models/bigvsan_10m_no_norm.pt\" to /home/steve/.cache/torch/hub/checkpoints/bigvsan_10m_no_norm.pt\n",
-      "100%|██████████| 429M/429M [00:04<00:00, 91.7MB/s] \n"
+      "Downloading: \"https://github.com/ex3ndr/supervoice-vocoder/zipball/master\" to /home/steve/.cache/torch/hub/master.zip\n"
      ]
     }
    ],
@@ -57,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "07521e06-dc01-49c4-9ac5-83d69a2566b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e350bfab6bd84ba0a59abf2426a02830",
+       "model_id": "d145ea49533e4237851272a7aede482f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,7 +70,7 @@
        "FileUpload(value=(), description='Upload')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "fa0f47f8-a302-4235-a657-97ac9afa6797",
    "metadata": {},
    "outputs": [],
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "id": "a408e538-29ba-42d7-954f-aa5dc8155806",
    "metadata": {},
    "outputs": [],
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "0cd971b9-237a-405e-9dd3-f9030f697e20",
    "metadata": {},
    "outputs": [
@@ -221,10 +219,18 @@
     }
    ],
    "source": [
-    "resynth = model(spec.unsqueeze(0)).detach().squeeze(0)\n",
+    "resynth = model.generate(spec)\n",
     "display(Audio(data=source, rate=24000))\n",
     "display(Audio(data=resynth, rate=24000))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9136091e-9d80-42f5-8da8-20e7eb0a6083",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
